fixed tabled overflows and navbarlayout styles

--- a/src/styles/Navbar/NavbarMinimal.module.css
+++ b/src/styles/Navbar/NavbarMinimal.module.css
@@ -67,7 +67,7 @@
     Greycliff CF,
     var(--mantine-font-family);
   font-size: large;
-  font-weight: 900;
+  font-weight: 600;
   gap: 4px;
   /* border-bottom: 1px solid
     light-dark(
@@ -86,7 +86,7 @@
     Greycliff CF,
     var(--mantine-font-family);
   font-size: large;
-  font-weight: 900;
+  font-weight: 600;
 }
 
 .appshellMain {
